# foolang

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  hello
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: unit_test.yml
llvm/: Cargo.toml  build.rs
prototype/: README.md
src/: build.rs  lib.rs  main.rs  test.rs  test_elf.rs
src/action/: build.rs
src/ast/: README.md  expression.rs  mod.rs  operator.rs  statement.rs
src/ast/expression/: binary.rs  call.rs  literal.rs  parentheses.rs  unary.rs  variable.rs
src/ast/operator/: binary.rs  unary.rs
src/ast/statement/: define_function.rs  define_variable.rs
src/builder/: README.md  mod.rs
src/codegen/: READMD.md  expression.rs  mod.rs
src/command/: README.md  mod.rs
src/command/action/: build.rs
src/error/: all_error.rs  mod.rs  parser_error.rs
src/error/all_error/: parser_error.rs
src/ir/: READMD.md  error.rs  mod.rs
src/ir/ast/: mod.rs  types.rs
src/ir/compiler/: constant.rs  mod.rs
src/ir/data/: mod.rs  object.rs  relocation.rs  section.rs  symbol.rs
src/ir/ssa/: README.md  cfg_builder.rs  liveness.rs  mod.rs  phi_insertion.rs  register_allocator.rs
src/lexer/: README.md  general.rs  keyword.rs  mod.rs  operator.rs  primary.rs  token.rs  tokenizer.rs
src/lexer/test/: expression.rs  general.rs  mod.rs  operator.rs  primary.rs
src/llvm/: bindings.rs  wrapping.cpp
src/parser/: README.md  context.rs  expression.rs  mod.rs  variable.rs
src/parser/declare/: mod.rs  variable.rs
src/parser/expression/: binary.rs  (+4 more)
src/utils/: logger.rs
(+47 files in other folders)
