[package]
name = "foolang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
thiserror = "1.0.40"
clap = { version = "3.1.3", features = ["derive"] }
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "foo"
path = "./src/main.rs"
required-features = ["foo"]

[features]
default = ["foo"]
foo = ["cli"]
cli = ["atty", "structopt"]