[package]
name = "foolang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "3.1.3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }